--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,7 +1,12 @@
 <h1>Restaurants Listing</h1>
 
-<% @restaurants.each do |restaurant| %>
-  <h1><%= restaurant.name %></h1>
-<% end %>
+<ul>
+  <% @restaurants.each do |restaurant| %>
+    <li>
+      <span><%= restaurant.name %></span>
+      <%= link_to('view', restaurant_path(restaurant.id)) %>
+    </li>
+  <% end %>
+</ul>
 
 <%= link_to('Add a restaurant', new_restaurant_path) %>
